# ELLab-MLStudy

./: .gitignore  README.md  datasets.py  environment.yml  main.py  pyproject.toml  tensorboard.sh
architecture/: __init__.py  densenet.py  fractalnet.py  mlp_mixer.py  preactresnet.py  resnet.py  vit_pretrained.py
methods/: __init__.py  byol.py  moco.py  rotnet.py  supervised_learning.py
runs/Feb26_14-33-59_LGS-MODEL/: events.out.tfevents.1772084039.LGS-MODEL.85321.0
runs/Jun28_04-42-08_LGS-MODEL/: events.out.tfevents.1782589328.LGS-MODEL.108962.0
runs/Mar25_20-54-02_LGS-MODEL/: events.out.tfevents.1774439642.LGS-MODEL.866084.0
runs/Mar25_20-59-32_LGS-MODEL/: events.out.tfevents.1774439972.LGS-MODEL.866895.0
runs/ViT/ViT-finetuned(1)/: events.out.tfevents.1776318469.LGS-MODEL.2115265.0
runs/ViT/vit_pretrained-b128-lr0003-cosine-clip1-e26/: events.out.tfevents.1777271292.LGS-MODEL.2366952.0
runs/fractalnet/fractalnet-20/: events.out.tfevents.1776140310.LGS-MODEL.1741511.0
runs/fractalnet/fractalnet-40/: events.out.tfevents.1776140462.LGS-MODEL.1742279.0
runs/fractalnet/fractalnet_droppath-20-lr002-e400/: events.out.tfevents.1777215889.LGS-MODEL.2348241.0
runs/fractalnet/fractalnet_droppath-20-paperlike/: events.out.tfevents.1777277885.LGS-MODEL.2373548.0  events.out.tfevents.1777277927.LGS-MODEL.2373924.0
runs/mlp_mixer/: events.out.tfevents.1780511864.LGS-MODEL.1838542.0
runs/resnet-44/: events.out.tfevents.1772084025.LGS-MODEL.85080.0
runs/resnet56/: events.out.tfevents.1772084028.LGS-MODEL.85159.0
(+8 files in other folders)
